--- a/widget/templates/home.html
+++ b/widget/templates/home.html
@@ -4,7 +4,7 @@
 </div>-->
 <div id="home">
     <div ng-if="WidgetHome.media.data.design.listLayout"
-         
+         ng-style="WidgetHome.deepLink ? {'visibility':'visible'} : {'visibility':'hidden'}"
          ng-include="'templates/layouts/' + WidgetHome.media.data.design.listLayout+ '.html'">
     </div>
 </div>
