--- a/widget/templates/layouts/now-playing.html
+++ b/widget/templates/layouts/now-playing.html
@@ -126,17 +126,17 @@
                             </div>
                             <div class="remove-btn text-center dangerBackgroundTheme" style="background:red;"
                                 ng-click="NowPlaying.removeTrackFromPlayList($index)">
-                                <span class="whiteTheme">{{NowPlaying.playListStrings.removePlayListButton}}</span>
+                                <span class="whiteTheme">Remove</span>
                             </div>
                         </div>
                     </div>
                     <div ng-if="!NowPlaying.playList.length">
-                        <h3>{{NowPlaying.playListStrings.emptyPlaylist}}</h3>
+                        <h3>Playlist is empty.</h3>
                     </div>
                 </div>
             </div>
             <div class="margin-top-ten margin-bottom-ten">
-                <a ng-click="NowPlaying.closePlayListOverlay()" class="primaryTheme">{{NowPlaying.playListStrings.donePlaylist}}</a>
+                <a ng-click="NowPlaying.closePlayListOverlay()" class="primaryTheme">Done</a>
             </div>
         </div>
     </div>
@@ -161,13 +161,15 @@
                 <hr class="none">
                 <div class="more-info-list padded">
                     <div class="text-center item">
-                        <a ng-click="NowPlaying.getFromPlaylist()" class="whiteTheme">{{NowPlaying.playListStrings.goToPlaylist}}</a>
+                        <a ng-click="NowPlaying.getFromPlaylist()" class="whiteTheme">Go to Playlist</a>
                     </div>
                     <div class="text-center item" ng-if="!NowPlaying.transferPlaylist">
-                        <a ng-click="NowPlaying.addToPlaylist(NowPlaying.currentTrack)" class="whiteTheme">{{NowPlaying.playListStrings.addToPlaylist}}</a>
+                        <a ng-click="NowPlaying.addToPlaylist(NowPlaying.currentTrack)" class="whiteTheme">Add to
+                            Playlist</a>
                     </div>
                     <div class="text-center item" ng-if="!NowPlaying.transferPlaylist">
-                        <a ng-click="NowPlaying.removeFromPlaylist(NowPlaying.currentTrack)" class="whiteTheme">{{NowPlaying.playListStrings.removeFromPlaylist}}</a>
+                        <a ng-click="NowPlaying.removeFromPlaylist(NowPlaying.currentTrack)" class="whiteTheme">Remove
+                            from Playlist</a>
                     </div>
                     <!--<div class="text-center item">
                         <a>Purchase</a>
@@ -176,7 +178,7 @@
                         <a>Share</a>
                     </div>-->
                     <div class="text-center item">
-                        <a ng-click="NowPlaying.closeMoreInfoOverlay()" class="whiteTheme">{{NowPlaying.playListStrings.cancelPlaylist}}</a>
+                        <a ng-click="NowPlaying.closeMoreInfoOverlay()" class="whiteTheme">Cancel</a>
                     </div>
                 </div>
             </div>
@@ -191,7 +193,7 @@
                 <div class="settings-list padded padding-top-zero">
                     <div class="item clearfix row" ng-if="!NowPlaying.forceAutoPlay">
                         <div class="col-md-10 pull-left text-left">
-                            <span class="whiteTheme">{{NowPlaying.settingsStrings.automaticallyPlayNextTrack}}</span>
+                            <span class="whiteTheme">Automatically play next track</span>
                         </div>
                         <div class="col-md-2 pull-right text-right">
                             <div class="checkbox checkbox-primary checked no-label margin-zero">
@@ -203,7 +205,7 @@
                     </div>
                     <div class="item clearfix row">
                         <div class="col-md-10 pull-left text-left">
-                            <span class="whiteTheme">{{NowPlaying.settingsStrings.loopPlaylist}}</span>
+                            <span class="whiteTheme">Loop playlist</span>
                         </div>
                         <div class="col-md-2 pull-right text-right">
                             <div class="checkbox checkbox-primary checked no-label margin-zero">
@@ -215,7 +217,7 @@
                     </div>
                     <div class="item clearfix row" ng-if="!NowPlaying.forceAutoPlay">
                         <div class="col-md-10 pull-left text-left">
-                            <span class="whiteTheme">{{NowPlaying.settingsStrings.autoJumpToLastPositon}}</span>
+                            <span class="whiteTheme">Auto Jump To LastPosition</span>
                         </div>
                         <div class="col-md-2 pull-right text-right">
                             <div class="checkbox checkbox-primary checked no-label margin-zero">
@@ -227,7 +229,7 @@
                     </div>
                     <div class="item clearfix row" ng-if="!NowPlaying.transferPlaylist">
                         <div class="col-md-10 pull-left text-left" >
-                            <span class="whiteTheme">{{NowPlaying.settingsStrings.shufflePlaylist}}</span>
+                            <span class="whiteTheme">Shuffle Playlist</span>
                         </div>
                         <div class="col-md-2 pull-right text-right">
                             <div class="checkbox checkbox-primary checked no-label margin-zero">
@@ -240,7 +242,7 @@
                 </div>
             </div>
             <div class="margin-bottom-ten">
-                <a ng-click="NowPlaying.closeSettingsOverlay()" class="whiteTheme">{{NowPlaying.settingsStrings.settingsDone}}</a>
+                <a ng-click="NowPlaying.closeSettingsOverlay()" class="whiteTheme">Done</a>
             </div>
         </div>
     </div>
