--- a/widget/assets/css/widget.app.css
+++ b/widget/assets/css/widget.app.css
@@ -1,4 +1,35 @@
 /* Plugin CSS */
+@media only screen and (max-width: 320px) {
+	.link-list a + a{
+		margin-left:4px;
+	}
+	.li-actions i, .li-actions-item i 
+	.li-actions i, .li-actions-item i {
+		padding: 9px 3px;
+	}
+  }
+
+@media only screen and (max-width: 375px) and (min-width: 320px) {
+	.link-list a + a{
+		margin-left:4px;
+	}
+	.li-actions i, .li-actions-item i 
+	.li-actions i, .li-actions-item i {
+		padding: 9px 3px;
+	}
+  }
+
+  /* Plugin CSS */
+@media only screen and (min-width: 375px) {
+	.link-list a + a{
+		margin-left:10px;
+	}
+	.li-actions i, .li-actions-item i 
+	.li-actions i, .li-actions-item i {
+		padding: 9px;
+	}
+  }
+
 .noSlide{
 	position: absolute;
     top: 0;
@@ -735,9 +766,6 @@ html[browser="Firefox"] .layout3 .list-layout .list-item-media .list-media-holde
 	display: inline-block;
 	padding: 5px 16px;
 }
-.link-list a + a{
-	margin-left:10px;
-}
 
 .list-layout.has-btns .list-item{
     position:relative;
@@ -825,7 +853,6 @@ input[type=range] {
 .li-actions i, .li-actions-item i {
     position: relative;
     display: block;
-    padding: 9px;
     flex-shrink: 0;
     top: 0;
 }
