--- a/widget/templates/layouts/item-1.html
+++ b/widget/templates/layouts/item-1.html
@@ -24,12 +24,12 @@
         <div class="padded padding-top-zero">
             <div class="item-actions">
                 <div class="link-list">
-                    <a class="media-action" ng-click="WidgetMedia.playAudio();" ng-if="WidgetMedia.mediaType == 'AUDIO'">
-                        <i class="btn btn-success glyphicon glyphicon-volume-up"></i>
-                    </a>
                     <a class="media-action video" ng-click="WidgetMedia.toggleShowVideo();"
-                        ng-if="WidgetMedia.mediaType == 'VIDEO'">
+                        ng-if="WidgetMedia.item.data.videoUrl&&!WidgetMedia.media.data.design.skipMediaPage">
                         <i class="btn btn-success glyphicon glyphicon-play"></i>
+                    </a>
+                    <a class="media-action" ng-click="WidgetMedia.playAudio();" ng-if="WidgetMedia.item.data.audioUrl&&!WidgetMedia.media.data.design.skipMediaPage">
+                        <i class="btn btn-success glyphicon glyphicon-volume-up"></i>
                     </a>
                     <a ng-if="WidgetMedia.item.srcUrl && allowSource" ng-click="WidgetMedia.openLink(WidgetMedia.item.srcUrl)"
                         target="_blank">
