--- a/widget/templates/layouts/item-2.html
+++ b/widget/templates/layouts/item-2.html
@@ -26,7 +26,7 @@
                             </div>
                         </div>
 
-                        <div ng-include="'templates/layouts/video-player.html'"></div>
+                        <div id="myVideo" ng-include="'templates/layouts/video-player.html'"></div>
 
 
                     </div>
