--- a/widget/assets/css/media.css
+++ b/widget/assets/css/media.css
@@ -1,3 +1,90 @@
+/* Global Styles ////////////////////////////////////////////////////////////////////////////// */
+html{
+	font-size: 16px !important;
+}
+.caption {
+	font-size: .75rem;
+	line-height: 1.25rem;
+	opacity: .5;
+}
+.main-header{
+	box-shadow:0 2px 4px rgba(98, 98, 98, 0.3);
+	padding: 1rem;
+}
+h5{
+	font-size: 1rem !important;
+    font-weight: bold;
+}
+.list-layout{
+	padding: 1rem 0;
+}
+.list-item{
+	cursor: pointer;
+}
+.list-item:hover{
+	background-color: rgba(150,150,150,.05);
+}
+.btn-icon,
+.btn-icon.glyphicon{
+	top: auto;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	padding: 0;
+	width: 2.5rem;
+	height: 2.5rem;
+	border-radius: 50%;
+	border: 0;
+	background-color: transparent;
+	font-size: 1.125rem;
+	cursor: pointer;
+}
+.btn-icon.glyphicon::before{
+	position: relative;
+	top: 1px;
+	left: 1px;
+}
+.btn-icon:hover{
+	background-color: rgba(150,150,150,.05);
+}
+.load-in{
+	transform: scale(.1);
+	opacity: 0;
+	animation: load-in .2s ease-in .5s forwards;
+}
+@keyframes load-in {
+	0%{
+			transform: scale(.1);
+	}
+	100%{
+			transform: scale(1);
+			opacity: 1;
+	}
+}
+.bottom.fixed-bottom.primaryBackgroundTheme{
+	padding-bottom: env(safe-area-inset-bottom);
+}
+.plugin-slider .plugin-slide,
+.plugin-slider.owl-carousel .owl-stage-outer,
+.plugin-slider.owl-carousel .owl-stage,
+.plugin-slider.owl-carousel .owl-item{
+	min-height: inherit !important;
+}
+.plugin-slider .plugin-slide img{
+	width: 100% !important;
+	height: 100% !important;
+	object-fit: cover !important;
+	min-height: inherit !important;
+}
+.word-break{
+	word-break: break-word;
+}
+.item-main-header {
+    box-shadow: 0 2px 4px rgb(98 98 98 / 30%);
+}
+/* End Global Styles ////////////////////////////////////////////////////////////////////////////// */
+
+
 .audio-player {
     overflow: hidden!important;
     position: fixed;
@@ -73,6 +160,28 @@
 }
 .layout3 .titleFlexBox .li-actions-item {
   display: flex;
+}
+.layout3 .list-item-media{
+    display: flex;
+    align-items: center;
+    overflow: hidden;
+}
+.layout3 .list-item-media .list-media-holder{
+    flex-shrink: 0;
+}
+.layout3 .list-item-media .li-actions-item{
+    position: relative;
+}
+.layout3 .list-item-media .list-media-holder .li-actions-item{
+    position: absolute;
+}
+.layout3 .li-actions-item .star{
+    margin-right: 0;
+    padding: .75rem !important;
+}
+.layout3 .list-layout .list-item-media .list-media-holder{
+    margin: .75rem;
+    margin-right: 0;
 }
 
 @media (max-height: 600px) { 
@@ -332,4 +441,17 @@ button.btn-icon.btn-lg {
         max-height: 120px;
         max-width: 120px;
     }
+}
+
+.layout2 .people-holder{
+    display: flex;
+}
+.layout2 .people-media img{
+    flex-shrink: 0;
+    width: 35%;
+    padding: .75rem;
+}
+.layout2 .people-info p{
+    font-size: .875rem;
+    text-align: left;
 }
